# book-7-rust

./: LICENSE.md  README.md
Ch2/: AAPL.csv  Cargo.toml  README.md  ^GSPC.csv
Ch2/src/: main.rs  plot.rs
