[package]
name = "Ch2"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.30", optional = true }
yahoo_finance_api = { version = "2.2.0", optional = true }
time = { version = "0.3.36", optional = true }
tokio = { version = "1.39.3", features = [
    "macros",
    "rt-multi-thread"
], optional = true }
polars = { version = "0.42.0", features = ["lazy", "csv", "fmt", "pct_change"] }

[features]
download = ["futures", "yahoo_finance_api", "time", "tokio"]
