[package]
name = "Ch2"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.30", optional = true }
yahoo_finance_api = { version = "2.2.0", optional = true }
time = { version = "0.3.36", optional = true }
tokio = { version = "1.39.3", features = [
    "macros",
    "rt-multi-thread"
], optional = true }
ndarray = "0.16.1"
polars = { version = "0.42.0", optional=true,features = ["lazy", "csv", "fmt", "pct_change","ndarray"] }
linfa = "0.7.0"
linfa-linear = "0.7.0"

[features]
download = ["futures", "yahoo_finance_api", "time", "tokio"]
use-polars = ["polars"]