[package]
name = "Ch2"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.30", optional = true }
yahoo_finance_api = { version = "2.2.0", optional = true, features = [
    "blocking",
] }
time = { version = "0.3.36", optional = true }
ndarray = "0.15.6"
csv = "1.3.0"
polars = { version = "0.42.0", optional = true, features = [
    "lazy",
    "csv",
    "fmt",
    "pct_change",
    "ndarray",
] }
plotters = "0.3.6"
linfa = "0.7.0"
linfa-linear = "0.7.0"

[features]
download = ["futures", "yahoo_finance_api", "time"]
use-polars = ["polars"]
